# anki-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tui.yml
anki_cli/: __init__.py  __main__.py  config_runtime.py
anki_cli/backends/: __init__.py  ankiconnect.py  detect.py  protocol.py
anki_cli/cli/: app.py  dispatcher.py  formatter.py  params.py
anki_cli/cli/commands/: cards.py  config.py  deck.py  general.py  note.py  notetype.py  review.py  search.py  shell.py  tag.py
anki_cli/core/: scheduler.py  undo.py
anki_cli/db/: anki_direct.py
anki_cli/models/: config.py  output.py
anki_cli/tui/: browse_app.py  colors.py  repl.py  review_app.py
tests/tui/: test_browse_app.py
