[project]
name = "anki-cli"
version = "0.1.0"
description = "Hybrid Anki CLI for humans and agents"
requires-python = ">=3.12"
dependencies = [
  "click",
  "rich",
  "pydantic",
  "fsrs",
  "httpx",
  "betterproto",
]

[project.optional-dependencies]
tui = ["textual"]
clipboard = ["pyperclip"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
anki = "anki_cli.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anki_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
